--- a/src/main/resources/templates/kehadiran.html
+++ b/src/main/resources/templates/kehadiran.html
@@ -110,78 +110,49 @@
                                     <div class="col-lg-12">
                                         <div class="table-responsive">
                                             <table class="table table-sm">
+                                               <form action="kehadiran" id="selectKaryawan" name="selectKaryawan" method="post" enctype="multipart/form-data">
                                                 <tbody>
-                                                   
                                                     <tr>
-                                                       
                                                         <td>Bulan</td>
                                                         <td>
-                                                            <select id="bulansrc" name="bulansrc" class="form-control form-control-sm" onchange="functIsiHari(this.value)">
+                                                            <select id="bulansrc" name="bulansrc" class="form-control form-control-sm">
                                                                 <option value="01">Januari</option>
-                                                                <option value="02">Februari</option>   
+                                                                <option value="02">Februari</option>
+                                                                <option value="03">Maret</option>
+                                                                <option value="04">April</option>
+                                                                <option value="05">Mei</option>
+                                                                <option value="06">Juni</option>
+                                                                <option value="07">Juli</option>
+                                                                <option value="08">Agustus</option>
+                                                                <option value="09">September</option>
+                                                                <option value="10">Oktober</option>
+                                                                <option value="11">November</option>
+                                                                <option value="12">Desember</option>   
                                                             </select>
                                                         </td>
                                                          <td>Tahun</td>
                                                          <td><select id="tahunsrc" name="tahunsrc" class="form-control form-control-sm">
-                                                                <option value="">2022</option>
+                                                                <option value="2022">2022</option>
                                                             </select>
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Tanggal</td>
-                                                        <td>
-                                                            <select id="tglsrc" name="tglsrc" class="form-control form-control-sm">
-                                                                <option value="01">1</option>
-                                                                <option value="02">2</option>
-                                                                <option value="03">3</option>
-                                                                <option value="04">4</option>
-                                                                <option value="05">5</option>
-                                                                <option value="06">6</option>
-                                                                <option value="07">7</option>
-                                                                <option value="08">8</option>
-                                                                <option value="09">9</option>
-                                                                <option value="10">10</option>
-                                                                <option value="11">11</option>
-                                                                <option value="12">12</option>
-                                                                <option value="13">13</option>
-                                                                <option value="14">14</option>
-                                                                <option value="15">15</option>
-                                                                <option value="16">16</option>
-                                                                <option value="17">17</option>
-                                                                <option value="18">18</option>
-                                                                <option value="19">19</option>
-                                                                <option value="20">20</option>
-                                                                <option value="21">21</option>
-                                                                <option value="22">22</option>
-                                                                <option value="23">23</option>
-                                                                <option value="24">24</option>
-                                                                <option value="25">25</option>
-                                                                <option value="26">26</option>
-                                                                <option value="27">27</option>
-                                                                <option value="28">28</option>
-                                                                <option value="29">29</option>
-                                                                <option value="30">30</option>
-                                                                <option value="31">31</option>
-                                                            </select>
-                                                        </td>
                                                         <td>Nama Karyawan</td>
                                                         <td>
-                                                            <form th:action="@{/kehadiran}" id="selectKaryawan" name="selectKaryawan" method="get">
-                                                                <select name="cmbNamaKaryawan" id="cmbNamaKaryawan" class="form-control" style="width: 150px;">
-                                                                    <option>--</option>
-                                                                    <option th:each="karyawanModel : ${ListKaryawanModel}" th:value="${karyawanModel.namaPegawai}" th:text="${karyawanModel.namaPegawai}"></option>
-                                                                </select>                                                            
-                                                            </form>
+                                                             <select name="cmbNamaKaryawan" id="cmbNamaKaryawan" class="form-control" style="width: 150px;">
+                                                                <option th:each="karyawanModel : ${ListKaryawanModel}" th:value="${karyawanModel.namaPegawai}" th:text="${karyawanModel.namaPegawai}"></option>
+                                                              </select>                                                            
                                                         </td>
-                                                        </tr>
-                                                                                                    
-                                                                                                       
+                                                        <td>
+                                                             <button type="submit">Search</button>
+                                                        </td>
+                                                    </tr>
                                                 </tbody>
+                                              </form>
                                             </table>                                                    
                                         </div>                                                                                      
                                         <div class="form-group">
-                                         
-                                       <div class="col-lg-12">
+                                        <div class="col-lg-12">
                                         <div class="table-responsive">
                                         <table class="table">
                                             <tbody>
@@ -523,7 +494,9 @@
             </div>
         </div>
     </div>
-    <input type="text" id="nameSelected" name="nameSelected" th:value="${nameSelected}" style="display:none">   
+    <input type="text" id="nameSelected" name="nameSelected" th:value="${nameSelected}" style="display:none">
+    <input type="text" id="monthSelected" name="monthSelected" th:value="${monthSelected}" style="display:none">
+    <input type="text" id="yearSelected" name="yearSelected" th:value="${yearSelected}" style="display:none">   
     
     
      <style>
@@ -544,7 +517,11 @@
      
      $(window).on("load",function(){
     	 var selectedName = $('#nameSelected').val();
+    	 var selectedMonth = $('#nameSelected').val();
+    	 var selectedYear = $('#nameSelected').val();
     	 $("select option[value='"+selectedName+"']").attr("selected",true);
+    	 $("select option[value='"+selectedMonth+"']").attr("selected",true);
+    	 $("select option[value='"+selectedYear+"']").attr("selected",true);
      })
 </script>
 
@@ -610,16 +587,5 @@
      
 
 </script>
-
-<script  type ="text/javascript">
-
-   $(document).ready(function(){
-	   $("#cmbNamaKaryawan").change(function(){
-		   $('#selectKaryawan').submit();		   
-	   })
-   })
-
-</script>
-
 </body>
 </html>
