default value select option

--- a/src/main/resources/templates/kehadiran.html
+++ b/src/main/resources/templates/kehadiran.html
@@ -517,8 +517,8 @@
      
      $(window).on("load",function(){
     	 var selectedName = $('#nameSelected').val();
-    	 var selectedMonth = $('#nameSelected').val();
-    	 var selectedYear = $('#nameSelected').val();
+    	 var selectedMonth = $('#monthSelected').val();
+    	 var selectedYear = $('#yearSelected').val();
     	 $("select option[value='"+selectedName+"']").attr("selected",true);
     	 $("select option[value='"+selectedMonth+"']").attr("selected",true);
     	 $("select option[value='"+selectedYear+"']").attr("selected",true);
