--- a/src/main/resources/templates/karyawan.html
+++ b/src/main/resources/templates/karyawan.html
@@ -93,7 +93,7 @@ input::-webkit-inner-spin-button {
      </div>
      
      <!-- Modal Master Add Data Karyawan -->
-     <div class="modal fade" id="myAddModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+     <div class="modal fade" id="myAddModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" onsubmit="return confirm('Do you really want to submit the form?');">
           <div class="modal-dialog">
               <div class="modal-content">
                     <form method="post" action="saveKaryawan" enctype="multipart/form-data">
@@ -224,7 +224,7 @@ input::-webkit-inner-spin-button {
     <div class="modal fade" id="myEditModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
            <div class="modal-dialog">
               <div class="modal-content">
-                     <form method="post" action="editKaryawan" enctype="multipart/form-data">
+                     <form method="post" action="editKaryawan" enctype="multipart/form-data" onsubmit="return confirm('Do you really want to submit the form?');">
                          <div class="modal-header">
                              <h4 class="modal-title" id="titleEditDataKaryawan" style="display: block">Edit Data Karyawan</h4>
                              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>                                            
@@ -268,7 +268,7 @@ input::-webkit-inner-spin-button {
                                                                  NIK
                                                              </td>
                                                              <td>
-                                                                 <input class="form-control" name="editTxtNIK" id="editTxtNIK"/>
+                                                                 <input class="form-control" name="editTxtNIK" id="editTxtNIK" required/>
                                                              </td>
                                                         </tr>                                                        
                                                         <tr>
@@ -321,7 +321,7 @@ input::-webkit-inner-spin-button {
                                                                </td>                                                  
                                                                <td>
                                                                    <img name="editFoto" id="editFoto"/>
-                                                                   <input class="form-control" type="file" name="editfileFoto" id="editfileFoto" style=";width: 200px;text-transform:uppercase" onChange="document.getElementById('editFoto').src = window.URL.createObjectURL(this.files[0]);">
+                                                                   <input class="form-control" type="file" name="editfileFoto" id="editfileFoto" style=";width: 200px;text-transform:uppercase" onChange="document.getElementById('editFoto').src = window.URL.createObjectURL(this.files[0]);" required>
                                                                </td>                                                                                                                                        
                                                            </tr>
                                                            <tr>
@@ -329,7 +329,7 @@ input::-webkit-inner-spin-button {
                                                                    Jabatan
                                                                </td>                                                 
                                                                <td>
-                                                                   <input class="form-control" name="editTxtJabatan" id="editTxtJabatan" style="width: 200px;text-transform:uppercase"/>
+                                                                   <input class="form-control" name="editTxtJabatan" id="editTxtJabatan" style="width: 200px;text-transform:uppercase" required/>
                                                                </td>                                                                                                                                        
                                                            </tr>
                                                            <tr style="display:none">
@@ -337,7 +337,7 @@ input::-webkit-inner-spin-button {
                                                                    NIP
                                                                </td>                                                 
                                                                <td>
-                                                                   <input class="form-control" name="editTxtNIP" id="editTxtNIP" style="width: 200px;text-transform:uppercase"/>
+                                                                   <input class="form-control" name="editTxtNIP" id="editTxtNIP" style="width: 200px;text-transform:uppercase" required/>
                                                                </td>                                                                                                                                        
                                                            </tr>                                                           
                                                         </tbody>                                                                
@@ -597,22 +597,25 @@ input::-webkit-inner-spin-button {
 			var selectedId = ListData[i].id;
 			ids.push(selectedId);
     	});
-    	  $.ajax({
-			url        :'/Sindopan/deleteKaryawan',
-			type       : 'post',
-			data       : JSON.stringify(ids),
-			async      :false,
-	        dataType   : "text",
-			contentType: "application/json",
-			success    : function (result) {
-			 	  $(document).ajaxStop(function(){
-   				    window.location.reload();
-   				});  
-			}, 
-			 error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("tidak sukses hapus data");     
-            }            
-    	})
+	      var result = confirm("Are you sure you want to delete this user?");
+	      if(result){
+	    	  $.ajax({
+	  			url        :'/Sindopan/deleteKaryawan',
+	  			type       : 'post',
+	  			data       : JSON.stringify(ids),
+	  			async      :false,
+	  	        dataType   : "text",
+	  			contentType: "application/json",
+	  			success    : function (result) {
+	  			 	  $(document).ajaxStop(function(){
+	     				    window.location.reload();
+	     				});  
+	  			}, 
+	  			 error: function (XMLHttpRequest, textStatus, errorThrown) {
+	                  alert("tidak sukses hapus data");     
+	              }            
+	      	})  
+	      }
        })
     }
     
