--- a/src/main/resources/templates/kehadiran.html
+++ b/src/main/resources/templates/kehadiran.html
@@ -90,14 +90,14 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Kehadiran</h1>
+                    <h1 class="page-header">Presence</h1>
                 </div>
             </div>                        
             <div class="row">
                 <div class="col-lg-12">
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs">                                
-                        <li><a href="#master" data-toggle="tab">Master Kehadiran</a></li>                       
+                        <li><a href="#master" data-toggle="tab">Presence Master</a></li>                       
                     </ul>
                     
                     <!-- Tab panes -->
@@ -113,31 +113,31 @@
                                                <form action="kehadiran" id="selectKaryawan" name="selectKaryawan" method="post" enctype="multipart/form-data">
                                                 <tbody>
                                                     <tr>
-                                                        <td>Bulan</td>
+                                                        <td>Month</td>
                                                         <td>
                                                             <select id="bulansrc" name="bulansrc" class="form-control form-control-sm">
-                                                                <option value="01">Januari</option>
-                                                                <option value="02">Februari</option>
-                                                                <option value="03">Maret</option>
+                                                                <option value="01">January</option>
+                                                                <option value="02">February</option>
+                                                                <option value="03">March</option>
                                                                 <option value="04">April</option>
-                                                                <option value="05">Mei</option>
-                                                                <option value="06">Juni</option>
-                                                                <option value="07">Juli</option>
-                                                                <option value="08">Agustus</option>
+                                                                <option value="05">May</option>
+                                                                <option value="06">Juny</option>
+                                                                <option value="07">July</option>
+                                                                <option value="08">August</option>
                                                                 <option value="09">September</option>
-                                                                <option value="10">Oktober</option>
+                                                                <option value="10">October</option>
                                                                 <option value="11">November</option>
-                                                                <option value="12">Desember</option>   
+                                                                <option value="12">December</option>   
                                                             </select>
                                                         </td>
-                                                         <td>Tahun</td>
+                                                         <td>Year</td>
                                                          <td><select id="tahunsrc" name="tahunsrc" class="form-control form-control-sm">
                                                                 <option value="2022">2022</option>
                                                             </select>
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Nama Karyawan</td>
+                                                        <td>Employee Name</td>
                                                         <td>
                                                              <select name="cmbNamaKaryawan" id="cmbNamaKaryawan" class="form-control" style="width: 150px;">
                                                                 <option th:each="karyawanModel : ${ListKaryawanModel}" th:value="${karyawanModel.namaPegawai}" th:text="${karyawanModel.namaPegawai}"></option>
@@ -145,7 +145,7 @@
                                                         </td>
                                                         <td>
                                                              <button type="submit">Search</button>
-                                                        </td>
+                                                        </td>                                                        
                                                     </tr>
                                                 </tbody>
                                               </form>
@@ -159,7 +159,6 @@
                                                 <tr>  
                                                   <td align = "left">
                                                      <form action="uploadFile" method = "post" enctype = "multipart/form-data">
-                                                         <button id="btnSearch" type="button" class="btn btn-info" onclick="functSearchHari();"><i class="fa fa-search fa-fw"></i>Search</button>
                                                          <button id="btnNew" type="button" class="btn btn-success"><i class="fa fa-file-o fa-fw"></i>Upload Absensi</button>
                                                          <input type="file" id="fileAbsensi" name="fileAbsensi" style="display:none" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
                                                          <button type="submit" class="btn btn-success">Submit</button>    
@@ -193,12 +192,12 @@
                                     <table class="table table-striped table-bordered table-hover" id="dataTables-profile" data-sort="false" data-page-length="-1" style="font-size: 13px;">
                                         <thead>                                                
                                             <tr>
-                                                <th><center>Nama Karyawan</center></th>
-                                                <th><center>Tanggal</center></th>
+                                                <th><center>Employee Name</center></th>
+                                                <th><center>Date</center></th>
                                                 <th><center>Check In</center></th>
                                                 <th><center>Check Out</center></th>
-                                                <th><center>Durasi Kerja</center></th>
-                                                <th><center>Keterangan</center></th>
+                                                <th><center>Work Duration</center></th>
+                                                <th><center>Description</center></th>
                                             </tr>
                                             <tr th:each ="kehadiranModel:${ListKehadiranModel}" class="row-select">
                                                  <td class="namaKehadiran"><center><a th:text="${kehadiranModel.namaKaryawan}"></a></center></td>
@@ -547,20 +546,20 @@
             				 x = listData2[i].keterangan; 
             			 }
             			 else {
-            				 x="Alfa";
+            				 x="Without Description";
             			 }
                	     }
             		 else if(b>"08:00:00"){
-            		     x="Datang Terlambat";
+            		     x="Come Late";
             	     }
             		 else if(c<"17:00:00"){
-            			 x="pulang cepat"    
+            			 x="Go Home Early"    
             		 }
             		 else if(c>"19:00:00"){
-            			 x="lembur"
+            			 x="Overtime"
             		 }
             		 else {
-            			 x="Tepat Waktu";
+            			 x="On Time";
             		 }
                      break;            		 
             	 }
@@ -578,7 +577,7 @@
 			    var hours = Math.floor(diff / 1000 / 60 / 60);
 			    diff -= hours * 1000 * 60 * 60;
 			    var minutes = Math.floor(diff / 1000 / 60);
-		      	return (hours <= 9 ? "" : "") + hours + " Jam " + (minutes >= 1 ? minutes+" menit " : "");
+		      	return (hours <= 9 ? "" : "") + hours + " Hour " + (minutes >= 1 ? minutes+" Minutes " : "");
 		   }
 			    else {
 			    return null;	
