--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -123,18 +123,18 @@
                 <li><a href="welcome" target="iframe">Dashboard</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        Karyawan &nbsp;<i class="fa fa-caret-down"></i>
+                        Employee &nbsp;<i class="fa fa-caret-down"></i>
                     </a> 
                     <ul class="dropdown-menu">
                    <!-- <li value="karyawan" onClick="changeIframe(this)"><a>Karyawan</a></li> -->
-                        <li><a href="goToKaryawan" target="iframe">Data Karyawan</a></li>
-                        <li><a href="hariKerja?hariKerja=test" target="iframe" value="hariKerja" name="hariKerja" id="hariKerja">Hari Kerja</a></li>
-                        <li><a href="kehadiran" target="iframe">Kehadiran</a></li>
+                        <li><a href="goToKaryawan" target="iframe">Employee Data</a></li>
+                        <li><a href="hariKerja?hariKerja=test" target="iframe" value="hariKerja" name="hariKerja" id="hariKerja">Work Day</a></li>
+                        <li><a href="kehadiran" target="iframe">Presence</a></li>
                     </ul>                    
                 </li>  
                         <li class="dropdown">
                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                               Akuntansi &nbsp;
+                               Accounting &nbsp;
                                <!-- <i class="fa fa-caret-down"></i> -->
                            </a> 
 <!--                            <ul class="dropdown-menu">                        
@@ -154,7 +154,7 @@
 
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        Inventori &nbsp;<i class="fa fa-caret-down"></i>
+                        Inventory &nbsp;<i class="fa fa-caret-down"></i>
                     </a> 
                     <ul class="dropdown-menu">
                     </ul> 
